ghc-6.2/hslibs/win32/Win32NLS_stub_ffi.h

extern WORD prim_sUBLANG_NEUTRAL();
extern WORD prim_sUBLANG_DEFAULT();
extern WORD prim_sUBLANG_SYS_DEFAULT();
extern WORD prim_sUBLANG_CHINESE_TRADITIONAL();
extern WORD prim_sUBLANG_CHINESE_SIMPLIFIED();
extern WORD prim_sUBLANG_CHINESE_HONGKONG();
extern WORD prim_sUBLANG_CHINESE_SINGAPORE();
extern WORD prim_sUBLANG_DUTCH();
extern WORD prim_sUBLANG_DUTCH_BELGIAN();
extern WORD prim_sUBLANG_ENGLISH_US();
extern WORD prim_sUBLANG_ENGLISH_UK();
extern WORD prim_sUBLANG_ENGLISH_AUS();
extern WORD prim_sUBLANG_ENGLISH_CAN();
extern WORD prim_sUBLANG_ENGLISH_NZ();
extern WORD prim_sUBLANG_ENGLISH_EIRE();
extern WORD prim_sUBLANG_FRENCH();
extern WORD prim_sUBLANG_FRENCH_BELGIAN();
extern WORD prim_sUBLANG_FRENCH_CANADIAN();
extern WORD prim_sUBLANG_FRENCH_SWISS();
extern WORD prim_sUBLANG_GERMAN();
extern WORD prim_sUBLANG_GERMAN_SWISS();
extern WORD prim_sUBLANG_GERMAN_AUSTRIAN();
extern WORD prim_sUBLANG_ITALIAN();
extern WORD prim_sUBLANG_ITALIAN_SWISS();
extern WORD prim_sUBLANG_NORWEGIAN_BOKMAL();
extern WORD prim_sUBLANG_NORWEGIAN_NYNORSK();
extern WORD prim_sUBLANG_PORTUGUESE();
extern WORD prim_sUBLANG_PORTUGUESE_BRAZILIAN();
extern WORD prim_sUBLANG_SPANISH();
extern WORD prim_sUBLANG_SPANISH_MEXICAN();
extern WORD prim_sUBLANG_SPANISH_MODERN();
extern WORD prim_sUBLANG_ARABIC_SAUDI_ARABIA();
extern WORD prim_sUBLANG_ARABIC_IRAQ();
extern WORD prim_sUBLANG_ARABIC_EGYPT();
extern WORD prim_sUBLANG_ARABIC_LIBYA();
extern WORD prim_sUBLANG_ARABIC_ALGERIA();
extern WORD prim_sUBLANG_ARABIC_MOROCCO();
extern WORD prim_sUBLANG_ARABIC_TUNISIA();
extern WORD prim_sUBLANG_ARABIC_OMAN();
extern WORD prim_sUBLANG_ARABIC_YEMEN();
extern WORD prim_sUBLANG_ARABIC_SYRIA();
extern WORD prim_sUBLANG_ARABIC_JORDAN();
extern WORD prim_sUBLANG_ARABIC_LEBANON();
extern WORD prim_sUBLANG_ARABIC_KUWAIT();
extern WORD prim_sUBLANG_ARABIC_UAE();
extern WORD prim_sUBLANG_ARABIC_BAHRAIN();
extern WORD prim_sUBLANG_ARABIC_QATAR();
extern WORD prim_sUBLANG_AZERI_CYRILLIC();
extern WORD prim_sUBLANG_AZERI_LATIN();
extern WORD prim_sUBLANG_CHINESE_MACAU();
extern WORD prim_sUBLANG_ENGLISH_SOUTH_AFRICA();
extern WORD prim_sUBLANG_ENGLISH_JAMAICA();
extern WORD prim_sUBLANG_ENGLISH_CARIBBEAN();
extern WORD prim_sUBLANG_ENGLISH_BELIZE();
extern WORD prim_sUBLANG_ENGLISH_TRINIDAD();
extern WORD prim_sUBLANG_ENGLISH_PHILIPPINES();
extern WORD prim_sUBLANG_ENGLISH_ZIMBABWE();
extern WORD prim_sUBLANG_FRENCH_LUXEMBOURG();
extern WORD prim_sUBLANG_FRENCH_MONACO();
extern WORD prim_sUBLANG_GERMAN_LUXEMBOURG();
extern WORD prim_sUBLANG_GERMAN_LIECHTENSTEIN();
extern WORD prim_sUBLANG_KASHMIRI_INDIA();
extern WORD prim_sUBLANG_KOREAN();
extern WORD prim_sUBLANG_LITHUANIAN();
extern WORD prim_sUBLANG_MALAY_MALAYSIA();
extern WORD prim_sUBLANG_MALAY_BRUNEI_DARUSSALAM();
extern WORD prim_sUBLANG_NEPALI_INDIA();
extern WORD prim_sUBLANG_SERBIAN_LATIN();
extern WORD prim_sUBLANG_SERBIAN_CYRILLIC();
extern WORD prim_sUBLANG_SPANISH_GUATEMALA();
extern WORD prim_sUBLANG_SPANISH_COSTA_RICA();
extern WORD prim_sUBLANG_SPANISH_PANAMA();
extern WORD prim_sUBLANG_SPANISH_DOMINICAN_REPUBLIC();
extern WORD prim_sUBLANG_SPANISH_VENEZUELA();
extern WORD prim_sUBLANG_SPANISH_COLOMBIA();
extern WORD prim_sUBLANG_SPANISH_PERU();
extern WORD prim_sUBLANG_SPANISH_ARGENTINA();
extern WORD prim_sUBLANG_SPANISH_ECUADOR();
extern WORD prim_sUBLANG_SPANISH_CHILE();
extern WORD prim_sUBLANG_SPANISH_URUGUAY();
extern WORD prim_sUBLANG_SPANISH_PARAGUAY();
extern WORD prim_sUBLANG_SPANISH_BOLIVIA();
extern WORD prim_sUBLANG_SPANISH_EL_SALVADOR();
extern WORD prim_sUBLANG_SPANISH_HONDURAS();
extern WORD prim_sUBLANG_SPANISH_NICARAGUA();
extern WORD prim_sUBLANG_SPANISH_PUERTO_RICO();
extern WORD prim_sUBLANG_SWEDISH();
extern WORD prim_sUBLANG_SWEDISH_FINLAND();
extern WORD prim_sUBLANG_URDU_PAKISTAN();
extern WORD prim_sUBLANG_URDU_INDIA();
extern WORD prim_sUBLANG_UZBEK_LATIN();
extern WORD prim_sUBLANG_UZBEK_CYRILLIC();