ghc-6.2/hslibs/win32/Win32NLS.hs


foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_NEUTRAL" sUBLANG_NEUTRAL :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_DEFAULT" sUBLANG_DEFAULT :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SYS_DEFAULT" sUBLANG_SYS_DEFAULT :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_CHINESE_TRADITIONAL" sUBLANG_CHINESE_TRADITIONAL :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_CHINESE_SIMPLIFIED" sUBLANG_CHINESE_SIMPLIFIED :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_CHINESE_HONGKONG" sUBLANG_CHINESE_HONGKONG :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_CHINESE_SINGAPORE" sUBLANG_CHINESE_SINGAPORE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_DUTCH" sUBLANG_DUTCH :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_DUTCH_BELGIAN" sUBLANG_DUTCH_BELGIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_US" sUBLANG_ENGLISH_US :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_UK" sUBLANG_ENGLISH_UK :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_AUS" sUBLANG_ENGLISH_AUS :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_CAN" sUBLANG_ENGLISH_CAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_NZ" sUBLANG_ENGLISH_NZ :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_EIRE" sUBLANG_ENGLISH_EIRE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_FRENCH" sUBLANG_FRENCH :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_FRENCH_BELGIAN" sUBLANG_FRENCH_BELGIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_FRENCH_CANADIAN" sUBLANG_FRENCH_CANADIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_FRENCH_SWISS" sUBLANG_FRENCH_SWISS :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_GERMAN" sUBLANG_GERMAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_GERMAN_SWISS" sUBLANG_GERMAN_SWISS :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_GERMAN_AUSTRIAN" sUBLANG_GERMAN_AUSTRIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ITALIAN" sUBLANG_ITALIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ITALIAN_SWISS" sUBLANG_ITALIAN_SWISS :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_NORWEGIAN_BOKMAL" sUBLANG_NORWEGIAN_BOKMAL :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_NORWEGIAN_NYNORSK" sUBLANG_NORWEGIAN_NYNORSK :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_PORTUGUESE" sUBLANG_PORTUGUESE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_PORTUGUESE_BRAZILIAN" sUBLANG_PORTUGUESE_BRAZILIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH" sUBLANG_SPANISH :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_MEXICAN" sUBLANG_SPANISH_MEXICAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_MODERN" sUBLANG_SPANISH_MODERN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_SAUDI_ARABIA" sUBLANG_ARABIC_SAUDI_ARABIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_IRAQ" sUBLANG_ARABIC_IRAQ :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_EGYPT" sUBLANG_ARABIC_EGYPT :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_LIBYA" sUBLANG_ARABIC_LIBYA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_ALGERIA" sUBLANG_ARABIC_ALGERIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_MOROCCO" sUBLANG_ARABIC_MOROCCO :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_TUNISIA" sUBLANG_ARABIC_TUNISIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_OMAN" sUBLANG_ARABIC_OMAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_YEMEN" sUBLANG_ARABIC_YEMEN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_SYRIA" sUBLANG_ARABIC_SYRIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_JORDAN" sUBLANG_ARABIC_JORDAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_LEBANON" sUBLANG_ARABIC_LEBANON :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_KUWAIT" sUBLANG_ARABIC_KUWAIT :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_UAE" sUBLANG_ARABIC_UAE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_BAHRAIN" sUBLANG_ARABIC_BAHRAIN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ARABIC_QATAR" sUBLANG_ARABIC_QATAR :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_AZERI_CYRILLIC" sUBLANG_AZERI_CYRILLIC :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_AZERI_LATIN" sUBLANG_AZERI_LATIN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_CHINESE_MACAU" sUBLANG_CHINESE_MACAU :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_SOUTH_AFRICA" sUBLANG_ENGLISH_SOUTH_AFRICA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_JAMAICA" sUBLANG_ENGLISH_JAMAICA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_CARIBBEAN" sUBLANG_ENGLISH_CARIBBEAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_BELIZE" sUBLANG_ENGLISH_BELIZE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_TRINIDAD" sUBLANG_ENGLISH_TRINIDAD :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_PHILIPPINES" sUBLANG_ENGLISH_PHILIPPINES :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_ENGLISH_ZIMBABWE" sUBLANG_ENGLISH_ZIMBABWE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_FRENCH_LUXEMBOURG" sUBLANG_FRENCH_LUXEMBOURG :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_FRENCH_MONACO" sUBLANG_FRENCH_MONACO :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_GERMAN_LUXEMBOURG" sUBLANG_GERMAN_LUXEMBOURG :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_GERMAN_LIECHTENSTEIN" sUBLANG_GERMAN_LIECHTENSTEIN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_KASHMIRI_INDIA" sUBLANG_KASHMIRI_INDIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_KOREAN" sUBLANG_KOREAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_LITHUANIAN" sUBLANG_LITHUANIAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_MALAY_MALAYSIA" sUBLANG_MALAY_MALAYSIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_MALAY_BRUNEI_DARUSSALAM" sUBLANG_MALAY_BRUNEI_DARUSSALAM :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_NEPALI_INDIA" sUBLANG_NEPALI_INDIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SERBIAN_LATIN" sUBLANG_SERBIAN_LATIN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SERBIAN_CYRILLIC" sUBLANG_SERBIAN_CYRILLIC :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_GUATEMALA" sUBLANG_SPANISH_GUATEMALA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_COSTA_RICA" sUBLANG_SPANISH_COSTA_RICA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_PANAMA" sUBLANG_SPANISH_PANAMA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_DOMINICAN_REPUBLIC" sUBLANG_SPANISH_DOMINICAN_REPUBLIC :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_VENEZUELA" sUBLANG_SPANISH_VENEZUELA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_COLOMBIA" sUBLANG_SPANISH_COLOMBIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_PERU" sUBLANG_SPANISH_PERU :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_ARGENTINA" sUBLANG_SPANISH_ARGENTINA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_ECUADOR" sUBLANG_SPANISH_ECUADOR :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_CHILE" sUBLANG_SPANISH_CHILE :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_URUGUAY" sUBLANG_SPANISH_URUGUAY :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_PARAGUAY" sUBLANG_SPANISH_PARAGUAY :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_BOLIVIA" sUBLANG_SPANISH_BOLIVIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_EL_SALVADOR" sUBLANG_SPANISH_EL_SALVADOR :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_HONDURAS" sUBLANG_SPANISH_HONDURAS :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_NICARAGUA" sUBLANG_SPANISH_NICARAGUA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SPANISH_PUERTO_RICO" sUBLANG_SPANISH_PUERTO_RICO :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SWEDISH" sUBLANG_SWEDISH :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_SWEDISH_FINLAND" sUBLANG_SWEDISH_FINLAND :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_URDU_PAKISTAN" sUBLANG_URDU_PAKISTAN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_URDU_INDIA" sUBLANG_URDU_INDIA :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_UZBEK_LATIN" sUBLANG_UZBEK_LATIN :: SubLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANG_UZBEK_CYRILLIC" sUBLANG_UZBEK_CYRILLIC :: SubLANGID

-- % , SUBLANG_LITHUANIAN_CLASSIC (not in mingw-20001111)
